--- a/templates/gordian-rebuild.j2
+++ b/templates/gordian-rebuild.j2
@@ -128,7 +128,7 @@ clean_install() {
 [[ "${force}" -eq 1 ]] && clean_install
 
 pushd "${directory}"
-git pull
+git status | grep "nothing to commit, working tree clean" && git pull
 if [ "${install}" -eq 1 ]; then 
     msg "${BLUE}ansible-galaxy installing dependencies${NOFORMAT}"
     ansible-galaxy install -r requirements.yml
