--- a/templates/.zshrc.j2
+++ b/templates/.zshrc.j2
@@ -1,3 +1,8 @@
 source "{{ pyenvrc_path }}"
 export PATH="{{ ansible_env.HOME }}/.local/bin:$PATH"
+
+fpath=("{{ homebrew_prefix }}/share/zsh/site-functions" $fpath)
+autoload -Uz compinit
+compinit
+
 eval "$(starship init zsh)"
