--- a/templates/.zshrc.j2
+++ b/templates/.zshrc.j2
@@ -6,3 +6,7 @@ autoload -Uz compinit
 compinit
 
 eval "$(starship init zsh)"
+eval "$(direnv hook zsh)" 
+
+[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
+[ -f ~/.aliases ] && source ~/.aliases
