--- a/templates/vscode-settings.json.j2
+++ b/templates/vscode-settings.json.j2
@@ -3,7 +3,8 @@
   "editor.fontLigatures": true,
   "terminal.integrated.fontFamily": "{{ font }}",
   "vscode-neovim.neovimExecutablePaths.darwin": "{{ neovim_path }}",
-  "workbench.colorTheme": "Dracula",
+  "editor.lineNumbers": "relative",
+  "workbench.colorTheme": "Gruvbox Dark Hard",
   "workbench.iconTheme": "city-lights-icons-vsc-light",
   "files.exclude": {
     "**/.git": true,
@@ -52,6 +53,6 @@
   },
   "files.associations": {
     "*.json.j2": "jinja-json"
-  }
+  },
   "projectManager.git.baseFolders": ["{{ git_base_path }}"]
 }
